# mcp-on-demand

./: .gitignore  CURSOR_ROADMAP.md  Cargo.toml  README.md  install.sh  package.json
.github/workflows/: release.yml
src/: add.rs  benchmark.rs  cache.rs  child.rs  cli.ts  config.rs  config.ts  dashboard.rs  doctor.rs  export.rs  health.rs  index.ts  logs.rs  main.rs  protocol.rs  proxy-server.ts  proxy.rs  search.rs  tool-search.ts  update.rs
static/: dashboard.html
tests/: integration.rs
